--- a/style.css
+++ b/style.css
@@ -3,33 +3,20 @@ body {
     margin: 0;
     padding: 0;
     font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 
+.container {
+    text-align: center;
 }
 
 div {
-    width: 600px;
+    max-width: 600px;
+    width: 90%;
     margin: 5em auto;
     padding: 2em;
     background-color: #fdfdff;
     border-radius: 0.5em;
     box-shadow: 2px 3px 7px 2px rgba(0, 0, 0, 0.02);
-}
-
-a:link,
-a:visited {
-    color: #38488f;
-    text-decoration: none;
-}
-
-@media (max-width: 700px) {
-    div {
-        margin: 0 auto;
-        width: auto;
-    }
-}
-
-.container {
-    text-align: center;
 }
 
 a.button {
@@ -43,7 +30,6 @@ a.button {
     overflow: hidden;
     margin: 10px;
     text-decoration: none;
-    /* to remove underline on link */
 }
 
 a.button:hover {
@@ -68,6 +54,7 @@ a.button:hover::before {
 }
 
 #preloader {
+    display: none; /* Adjust visibility as needed */
     position: fixed;
     top: 0;
     left: 0;
@@ -75,9 +62,9 @@ a.button:hover::before {
     height: 100%;
     background-color: #fff;
     z-index: 9999;
-  }
-  
-  #loader {
+}
+
+#loader {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -88,10 +75,13 @@ a.button:hover::before {
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-  
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
