--- a/givegen/style.css
+++ b/givegen/style.css
@@ -4,14 +4,13 @@
 
 body {
     background-color: #f0f0f2;
-
     font-family: Arial, sans-serif;
     color: #333;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 form {
@@ -21,29 +20,10 @@ form {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-
     background-color: #fdfdff;
     border-radius: 10px;
     padding-top: 30px;
     position: relative;
-}
-
-#generate-button {
-    animation: pulse 1s infinite;
-}
-
-@keyframes pulse {
-    0% {
-        transform: scale(1);
-    }
-
-    50% {
-        transform: scale(1.1);
-    }
-
-    100% {
-        transform: scale(1);
-    }
 }
 
 label {
@@ -84,7 +64,22 @@ button:hover {
 }
 
 @media screen and (max-width: 768px) {
-    .container {
-        padding: 20px;
+    body {
+        padding: 10px;
+    }
+
+    form {
+        max-width: 100%;
+    }
+
+    input[type="text"],
+    select {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    button {
+        margin-right: 0;
+        margin-bottom: 10px;
     }
 }
