--- a/givegen/style.css
+++ b/givegen/style.css
@@ -1,13 +1,16 @@
-input[type="text"]:focus, select:focus {
-    border-color: #38488f;
-    transition: border-color 0.3s ease;
+* {
+    font-family: Arial, sans-serif;
 }
 
-button:hover {
-    background-color: #2c377d;
-    transition: background-color 0.3s ease;
-    transform: scale(1.05);
-    transition: transform 0.3s ease;
+body {
+    background-color: #f0f0f2;
+    font-family: Arial, sans-serif;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
 
 form {
@@ -17,29 +20,66 @@ form {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    transition: box-shadow 0.3s ease, background-color 0.3s ease;
+    background-color: #fdfdff;
+    border-radius: 10px;
+    padding-top: 30px;
+    position: relative;
 }
 
 label {
     font-weight: bold;
     display: block;
     margin-bottom: 10px;
-    transform: translateY(0);
-    transition: transform 0.3s ease;
 }
 
-input[type="text"], select {
+input[type=text] {
     padding: 8px;
     border-radius: 5px;
     border: 2px solid #ccc;
     width: 100%;
     margin-bottom: 20px;
-    transform: translateY(0);
-    transition: transform 0.3s ease;
 }
 
-input[type="text"]:focus + label,
-select:focus + label {
-    transform: translateY(-20px);
-    transition: transform 0.3s ease;
+select {
+    padding: 8px;
+    border-radius: 5px;
+    border: 2px solid #ccc;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+button {
+    background-color: #38488f;
+    text-decoration: none;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+button:hover {
+    color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        padding: 10px;
+    }
+
+    form {
+        max-width: 100%;
+    }
+
+    input[type="text"],
+    select {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    button {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
 }
